# esp32c6-audio-modem

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  prj.conf  sine.conf  wifi.conf.example
.github/workflows/: build.yml
boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
src/: main.c
src/features/audio_source/: audio_source.h  sine_source.c
src/features/jitter_buffer/: jitter_buffer.c  jitter_buffer.h
src/features/uart_audio/: uart_audio.c  uart_audio.h
src/features/udp_audio/: udp_audio.c  udp_audio.h
src/features/wifi_station/: wifi_station.c  wifi_station.h
tests/python/: README.rst  pytest.ini  requirements.txt  test_uart_audio.py  test_uart_audio_hardware.py  test_udp_audio.py  uart_audio.py  udp_audio.py
